@@ -45,7 +45,7 @@ class RepoSync:
         self.systems   = config.systems()
         self.settings  = config.settings()
         self.repos     = config.repos()
-
+        self.rflags     = self.settings.yumreposync_flags
 
     # ===================================================================
 
@@ -127,7 +127,7 @@ class RepoSync:
 
             if not has_rpm_list and repo.mirror_locally:
                 # if we have not requested only certain RPMs, use reposync
-                cmd = "/usr/bin/reposync --config=%s --repoid=%s --download_path=%s" % (temp_file, repo.name, store_path)
+                cmd = "/usr/bin/reposync %s --config=%s --repoid=%s --download_path=%s" % (self.rflags, temp_file, repo.name, store_path)
                 if repo.arch != "":
                     if repo.arch == "x86":
                        repo.arch = "i386" # FIX potential arch errors
@@ -162,7 +162,7 @@ class RepoSync:
             if has_rpm_list:
                 print _("- warning: --rpm-list is not supported for RHN content")
             rest = repo.mirror[6:] # everything after rhn://
-            cmd = "/usr/bin/reposync -r %s --download_path=%s" % (rest, store_path)
+            cmd = "/usr/bin/reposync %s -r %s --download_path=%s" % (self.rflags, rest, store_path)
             if repo.name != rest:
                 args = { "name" : repo.name, "rest" : rest }
                 raise CX(_("ERROR: repository %(name)s needs to be renamed %(rest)s as the name of the cobbler repository must match the name of the RHN channel") % args)
