@@ -80,7 +80,8 @@ DEFAULTS = {
     "xmlrpc_rw_enabled"           : 1,
     "xmlrpc_rw_port"              : 25152,
     "yum_post_install_mirror"     : 1,
-    "yumdownloader_flags"         : "--resolve"
+    "yumdownloader_flags"         : "--resolve",
+    "yumreposync_flags"           : "-l"
 }
 
 
